--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color: #213547;
+    color: #ffffff;
     background-color: #1A1A1A;
   }
   a:hover {
